--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
+    "axios": "^1.7.7",
+    "cypress": "^13.14.2",
     "date-fns": "2.0.1",
     "formik": "^2.2.6",
     "moment": "^2.29.1",
@@ -19,7 +20,7 @@
     "react-paginate": "^7.1.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
@@ -51,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5001"
 }
